# autograd-from-scratch

./: .gitignore  GUIDE.md  NOTES.md  README.md  benchmark.py  dual.py  engine.py  figures.py  hvp.py  implicit.py  landscape.py  micrograd.py  nn.py  pyproject.toml  reproduce.py  secondorder.py  train_gpt.py  train_mlp.py  viz.py  walkthrough.ipynb
.github/workflows/: tests.yml
autograd/: __init__.py  dual.py  hvp.py  implicit.py  micrograd.py  nn.py  secondorder.py  viz.py
challenge/: README.md  _check.py  _impl.py  conftest.py  dual_skeleton.py  engine_skeleton.py  test_01_scalar_basics.py  test_02_backward_topo.py  test_03_unbroadcast.py  test_04_matmul.py  test_05_ops.py  test_06_dual_adjoint.py
examples/: benchmark.py  figstyle.py  figures.py  landscape.py  train_gpt.py  train_mlp.py
paper/: autograd-from-scratch.tex  figures.py
solutions/: 01_add_sin.md  02_break_newton.md  03_zero_grad.md  README.md
tests/: test_dual.py  test_engine.py  test_hvp.py  test_implicit.py  test_integration.py  test_landscape.py  test_micrograd.py  test_nn.py  test_secondorder.py  test_viz.py
