[project]
name = "autograd-from-scratch"
version = "0.1.0"
description = "A tensor-valued reverse-mode autograd engine in NumPy, from scratch. Builds up to training a small Transformer with no torch.autograd."
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autograd"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "torch>=2.2",   # tests only, as a reference to check gradients against
]
viz = [
    "matplotlib>=3.8",   # figure scripts: landscape.py and benchmark.py
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = [".", "examples"]   # tests import the package and the example scripts
